fixed horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     justify-content: center;
     gap: 4rem;
     color: white;
+    align-items: end;
 }
 
 a {
@@ -71,6 +72,7 @@ a {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 5rem;
+    width: 100%;
 }
 
 h2 {
@@ -93,12 +95,11 @@ h2 {
 }
 
 #pic {
-    width: 30rem;
     height: 15rem;
 }
 
 .text {
-    width: 30rem;
+    max-width: 100%;
     font-size: 20px;
 }
 
